Fix z-indexing bug

--- a/src/components/compose.css
+++ b/src/components/compose.css
@@ -78,6 +78,7 @@
   text-shadow: 0 1px 10px var(--bg-color), 0 1px 10px var(--bg-color),
     0 1px 10px var(--bg-color), 0 1px 10px var(--bg-color),
     0 1px 10px var(--bg-color);
+  z-index: 2;
 }
 #_compose-container .status-preview-legend.reply-to {
   color: var(--reply-to-color);
